Implementação dos requisitos da atividade Alteração das medições e apontamento de quando há mudança de classificação do IMC